<?xml version="1.0"?>
<package format="3">
  <name>kistar_hand_bridge</name>
  <version>0.1.0</version>
  <description>ROS2 publisher bridge for KISTAR hand shared memory</description>

  <maintainer email="psw@example.com">psw</maintainer>
  <license>Proprietary</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>launch</depend>
  <depend>launch_ros</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
